# rustyscopes

./: .gitignore  Cargo.toml
rustyscope-traits/: Cargo.toml
rustyscope-traits/src/: lib.rs
rustyscope-viewer/: Cargo.toml
rustyscope-viewer/src/: main.rs  plot.rs
scopes/rustyscope-nrf/: Cargo.toml
scopes/rustyscope-nrf/src/: communications.rs  config.rs  description.rs  main.rs  mutex.rs  sampling.rs
scopes/rustyscope-nrf52832/: Cargo.toml  setup.sh
scopes/rustyscope-nrf52832/.cargo/: config.toml
scopes/rustyscope-nrf52832/src/: defmt_setup.rs  main.rs
