[package]
name = "rustyscope-viewer"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyscope-traits = { path = "../rustyscope-traits" }
ferrous-serialport = { version = "4.0.2", default-features = false }
structopt = { version = "0.3", features = [ "paw" ] }
byteorder = "1.4"
plotly = "0.6.0"
paw = "1.0"
