[package]
name = "rustyscope-nrf"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "defmt-default" ]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
rustyscope-traits = { path = "../../rustyscope-traits" }

cortex-m = { version = "0.7.2", features = ["inline-asm"] }
cortex-m-rt = "0.6.13"
embedded-hal = { version = "0.2.4", features = ["unproven"]}
nrf52832-hal = "0.12.1"

embassy-traits = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", features = ["52832"] }
embassy = { git = "https://github.com/embassy-rs/embassy.git" }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
futures-intrusive = { version = "0.4", default-features = false }
lock_api = "0.4.1"

defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = { version = "0.2", features = ["print-defmt"] }
arrayvec = { version = "0.7", default-features = false }
